<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="100dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    android:paddingTop="25dp"
    android:paddingBottom="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_width"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/dialog_edit_width"
        app:layout_constraintBottom_toBottomOf="@id/dialog_edit_width"/>

    <EditText
        android:id="@+id/dialog_edit_width"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:text="12"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_height"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/dialog_edit_height"
        app:layout_constraintBottom_toBottomOf="@id/dialog_edit_height"/>

    <EditText
        android:id="@+id/dialog_edit_height"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginTop="20dp"
        android:text="20"
        app:layout_constraintTop_toBottomOf="@id/dialog_edit_width"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_mines"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/dialog_edit_mines"
        app:layout_constraintBottom_toBottomOf="@id/dialog_edit_mines"/>

    <EditText
        android:id="@+id/dialog_edit_mines"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginTop="20dp"
        android:text="40"
        app:layout_constraintTop_toBottomOf="@id/dialog_edit_height"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>