<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kr.heroid.games.minesweeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:padding="10dp"
            android:background="@color/black_overlay"
            android:layout_width="match_parent"
            android:layout_height="65dp">

            <TextView
                android:id="@+id/text_mine_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/mine_left"/>

            <TextView
                android:id="@+id/text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/time"/>

            <Button
                android:id="@+id/button_more"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="22sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:layout_constraintRight_toLeftOf="@id/switch_mode"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/mode_flag"/>

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:gravity="center">

            <ScrollView
                android:id="@+id/scroll_v"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <HorizontalScrollView
                    android:id="@+id/scroll_h"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none">

                        <RelativeLayout
                            android:id="@+id/field_layout"
                            android:padding="15dp"
                            android:layout_marginBottom="80dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        </RelativeLayout>

                </HorizontalScrollView>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/zoom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/zoom_seek_bar"/>

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/zoom_seek_bar"
        android:max="200"
        android:visibility="invisible"
        android:progress="100"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintRight_toLeftOf="@id/fab_zoom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/ic_more_vert_white_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>
